<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/teal_700"
    tools:context=".MainActivity">

    <RelativeLayout
        android:id="@+id/relativeLayout"
        android:layout_width="282dp"
        android:layout_height="263dp"
        android:layout_marginHorizontal="20dp"
        android:background="@drawable/oval_bg"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.17">

        <TextView
            android:id="@+id/number_total"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_alignParentBottom="true"
            android:layout_marginTop="86dp"
            android:layout_marginBottom="97dp"
            android:gravity="center"
            android:text="@string/def_number_total"
            android:textColor="@color/white"
            android:textSize="60sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/visitor"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="38dp"
            android:gravity="center"
            android:text="@string/total_visitor"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/visitor_enter"
        android:layout_width="match_parent"
        android:layout_height="64dp"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:background="@drawable/round_bg"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/relativeLayout"
        app:layout_constraintVertical_bias="0.504">

        <TextView
            android:id="@+id/text_visitor_enter"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="36dp"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="12dp"
            android:text="@string/visitor_enter"
            android:textColor="@color/white"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/num_enter"
            android:layout_width="40dp"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="94dp"
            android:layout_marginTop="14dp"
            android:layout_marginBottom="16dp"
            android:layout_toEndOf="@+id/text_visitor_enter"
            android:text="@string/def_num_enter"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/visitor_exit"
        android:layout_width="match_parent"
        android:layout_height="64dp"
        android:layout_marginHorizontal="20dp"
        android:background="@drawable/round_bg"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/visitor_enter">

        <TextView
            android:id="@+id/text_visitor_exit"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="36dp"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="12dp"
            android:text="@string/visitor_exit"
            android:textColor="@color/white"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/num_exit"
            android:layout_width="40dp"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="94dp"
            android:layout_marginTop="14dp"
            android:layout_marginBottom="16dp"
            android:layout_toEndOf="@+id/text_visitor_exit"
            android:text="@string/def_num_exit"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold" />

    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>